test for handler and skipping test for domain, mocks package
